--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -17,4 +17,4 @@ steps:
     commands:
       - terraform init
       - terraform plan
-      - terraform apply --auto-approve
+      - terraform apply
